@@ -269,21 +269,17 @@ class Scene:
         i1 = iUtils.getIndent(level,3)
         i2 = iUtils.getIndent(level,6)
 
-        worldSpace = bNode.getMatrix('worldspace')
         localSpace = bNode.getMatrix('localspace')
-        transWld = worldSpace.translationPart()
-        transLoc =  localSpace.translationPart()
-        transDiff = transLoc - transWld
 
-        pos = transWld + transDiff
-        scale = worldSpace.scalePart()
-        rot = worldSpace.toEuler()
+        ipos = iUtils.b2iPosition(localSpace, bNode)
+        irot = iUtils.b2iRotation(localSpace, bNode)
+        iscale = iUtils.b2iVector(localSpace.scalePart())
 
-        spos = '%.6f, %.6f, %.6f' % (pos.x, pos.z, pos.y)
+        spos = '%.6f, %.6f, %.6f' % (ipos.x, ipos.y, ipos.z)
 
-        srot = '%.6f, %.6f, %.6f' % (90.0-rot.x, 90.0-rot.z, 0.0)
+        srot = '%.6f, %.6f, %.6f' % (irot.x, irot.y, irot.z)
         
-        sscale = '%.6f, %.6f, %.6f' % (scale.x, scale.z, scale.y)
+        sscale = '%.6f, %.6f, %.6f' % (iscale.x, iscale.y, iscale.z)
 
         self.writeSTDAttributes(file,i1,i2,bNode,spos,srot,sscale)
     
@@ -293,6 +289,8 @@ class Scene:
         lightType = 'Point'
         if light.type == Blender.Lamp.Types['Lamp']:
             lightType = 'Point'
+        if light.type == Blender.Lamp.Types['Area']:
+            lightType = 'Directional'
         if light.type == Blender.Lamp.Types['Spot']:
             lightType = 'Spot'
         if light.type == Blender.Lamp.Types['Sun']:
